# rust-server-check

./: Cargo.toml  Dockerfile  Makefile  README.md
src/: main.rs
