[package]
name = "server-check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns-lookup = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
failure = "0.1"
url = "2.2"
ssl-expiration = { git = "https://github.com/rrx/ssl-expiration", branch = "next" }
